More from http://argouml-stats.tigris.org/nonav/reports/findbugs/: Creating new instances of java.lang.Boolean wastes memory, since Boolean objects are immutable and there are only two useful values of this type. Use the Boolean.valueOf() method to create Boolean objects instead.